tests/NormalTests/paczka1/fuzzy1/52574635.err
Error in line 7: BhnOSd S589 26,3
Error in line 9: S589 S852 20,7
Error in line 12: zClJ S852 57,1
Error in line 22: BhnOSd S852 27,9
Error in line 28: zW3B9 S852 89,3
